# fumus

./: README.md  TODO  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.md  make.bat  quickstart.md  requirements.txt
fumus/: __init__.py
fumus/decorators/: __init__.py  handler.py  wrapper.py
fumus/queries/: __init__.py  query.py  query_generator.py
fumus/streams/: __init__.py  stream.py
fumus/utils/: optional.py  result.py
serpio/: __init__.py
serpio/decorators/: handler.py  mapper.py
serpio/iterators/: itertools_mixin.py  stream_generator.py
serpio/streams/: stream.py
serpio/utils/: optional.py  result.py
tests/: conftest.py  test_dict_item.py  test_itertools_mixin.py  test_optional.py  test_result.py  test_stream.py
